# RWANG

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MODEL-BENCHMARK.md  README.md  SECURITY.md  TODO.md  account-identity.mjs  account-identity.test.mjs  accounts-admin.mjs  accounts-admin.test.mjs  accounts.example.json  accounts.mjs  accounts.test.mjs  auto-wave.mjs  backlog.json  bench2.py  bench_r4.py  config.json  cost-meter.mjs  dev.bat  engine.mjs  image.mjs  image.test.mjs  ollama-vram.mjs  ollama-vram.test.mjs  openrouter-tools.test.mjs  orchestrator.mjs  package.json  personas.json  planner.mjs  planner.test.mjs  prewarm.mjs  providers-costmode.test.mjs  providers.mjs  r4_results.json  run.mjs  savings-report.mjs  (+4 more)
.claude/: settings.json
brain/: failures.jsonl
docs/: ADR-O-001--verify-gate.md  ADR-O-002--govibe-integration.md  ADR-O-003--backend-store.md  ADR-O-004--role-boundary-native.md  ADR-O-005--provider-registry.md  ADR-O-006--topology-core-faces-a2a.md  DESIGN--G-ORCHESTRA-V2.md  FEAT--COST-MODE.md  FEAT--DASHBOARD-AUTOSTART.md  FEAT--FREE-MODE-WORKERS.md  FEAT--IMAGE-PROVIDERS.md  FEAT--MULTI-ACCOUNT-ROTATION.md  FEAT--MULTI-AGENT-ORCHESTRATOR.md  FEAT--OLLAMA-VRAM-SERIALIZE.md  GUIDE--ADDING-PROVIDER.md  MASTERPLAN--G-ORCHESTRA-V2.md  REPORT--AUTONOMOUS-ENGINE-P0.md  REPORT--CMUX-INSPIRED-PRODUCT-CRITIQUE-ROADMAP.md  REPORT--prompt-fix-before-after.md  RUNBOOK--DOC-TO-CODE-PIPELINE.md  SPEC--BRIEF-HERE.md  SPEC--VERIFY-GATE.md  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+101 files in other folders)
