[package]
name = "g-orchestra"
version = "0.1.0"
description = "G-Orchestra v2 — governed autonomous multi-agent orchestrator (Tauri shell)"
authors = ["Boss"]
edition = "2021"

# See ADR-O-006: this Tauri shell is Face A of the one-core/four-faces topology.
# Phase 0/1 wraps the proven Node engine (server.mjs) as a supervised sidecar
# (strangler pattern, DESIGN §9); the Rust core port comes in Phase 2.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
